Add categories handlers
